--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "prettier": "^3.1.1",
         "prettier-plugin-tailwindcss": "^0.5.11",
         "react-native-dotenv": "^3.4.9",
-        "tailwindcss": "^3.3.2"
+        "tailwindcss": "3.3.2"
     },
     "private": true
 }
