--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
         "react-native-safe-area-context": "4.6.3",
         "react-native-screens": "~3.22.0",
         "react-native-web": "^0.19.9",
-        "react-navigation": "^5.0.0"
-    },
-    "devDependencies": {
+        "react-navigation": "^5.0.0",
         "@babel/core": "^7.20.0",
         "@types/react-native-dotenv": "^0.2.2",
         "prettier": "^3.1.1",
