--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@expo/webpack-config": "^19.0.0",
         "@react-native-async-storage/async-storage": "^1.19.8",
+        "@react-native-community/datetimepicker": "^7.6.2",
         "@react-native-community/masked-view": "^0.1.11",
         "@react-native-picker/picker": "2.4.10",
         "@react-navigation/bottom-tabs": "^6.5.11",
@@ -29,6 +30,7 @@
         "react-native-gesture-handler": "~2.12.0",
         "react-native-image-crop-picker": "^0.40.2",
         "react-native-image-picker": "^7.0.2",
+        "react-native-modal": "^13.0.1",
         "react-native-reanimated": "~3.3.0",
         "react-native-safe-area-context": "4.6.3",
         "react-native-screens": "~3.22.0",
