--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "axios": "^1.6.2",
         "expo": "~49.0.15",
         "expo-status-bar": "~1.6.0",
+        "jotai": "^2.6.3",
         "nativewind": "^2.0.11",
         "react": "18.2.0",
         "react-dom": "18.2.0",
