--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@babel/core": "^7.20.0",
         "@expo/webpack-config": "^19.0.0",
+        "@preact/signals-react": "^2.0.0",
         "@react-native-async-storage/async-storage": "^1.19.8",
         "@react-native-community/datetimepicker": "^7.6.2",
         "@react-native-community/masked-view": "^0.1.11",
@@ -18,13 +20,17 @@
         "@react-navigation/bottom-tabs": "^6.5.11",
         "@react-navigation/native": "^6.1.9",
         "@react-navigation/stack": "^6.3.20",
+        "@types/react-native-dotenv": "^0.2.2",
         "axios": "^1.6.2",
         "expo": "~49.0.15",
         "expo-status-bar": "~1.6.0",
         "nativewind": "^2.0.11",
+        "prettier": "^3.1.1",
+        "prettier-plugin-tailwindcss": "^0.5.11",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-native": "0.72.6",
+        "react-native-dotenv": "^3.4.9",
         "react-native-dropdown-select-list": "^2.0.5",
         "react-native-elements": "^3.4.3",
         "react-native-gesture-handler": "~2.12.0",
@@ -36,12 +42,10 @@
         "react-native-screens": "~3.22.0",
         "react-native-web": "^0.19.9",
         "react-navigation": "^5.0.0",
-        "@babel/core": "^7.20.0",
-        "@types/react-native-dotenv": "^0.2.2",
-        "prettier": "^3.1.1",
-        "prettier-plugin-tailwindcss": "^0.5.11",
-        "react-native-dotenv": "^3.4.9",
         "tailwindcss": "3.3.2"
     },
-    "private": true
+    "private": true,
+    "devDependencies": {
+        "@preact/signals-react-transform": "^0.3.0"
+    }
 }
