--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-native-image-crop-picker": "^0.40.2",
         "react-native-image-picker": "^7.0.2",
         "react-native-modal": "^13.0.1",
+        "react-native-otp-textinput": "^1.1.5",
         "react-native-reanimated": "~3.3.0",
         "react-native-safe-area-context": "4.6.3",
         "react-native-screens": "~3.22.0",
