--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react-native-dotenv": "^0.2.2",
     "axios": "^1.6.2",
-    "expo": "~49.0.15",
+    "expo": "^49.0.0",
     "expo-image-picker": "^14.7.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-compressor": "^1.8.24",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
