--- a/app.json
+++ b/app.json
@@ -1,39 +1,44 @@
 {
-    "expo": {
-        "name": "iluvus-react-native",
-        "slug": "iluvus-react-native",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "icon": "./assets/icon.png",
-        "userInterfaceStyle": "light",
-        "plugins": [
-            "expo-image-picker",
-            "react-native-compressor"
-        ],
-        "splash": {
-            "image": "./assets/splash.png",
-            "resizeMode": "contain",
-            "backgroundColor": "#ffffff"
-        },
-        "assetBundlePatterns": ["**/*"],
-        "ios": {
-            "supportsTablet": true,
-            "infoPlist": {
-                "NSCameraUsageDescription": "We needs camera permissions to allow you to upload profile photos.",
-                "NSPhotoLibraryAddUsageDescription": "We needs photo library permissions to allow you to upload profile images.",
-                "NSPhotoLibraryUsageDescription": "We needs photo library permissions to allow you to upload profile images."
-            },
-            "bundleIdentifier": "com.anonymous.iluvus-react-native"
-        },
-        "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#ffffff"
-            },
-            "permissions": ["android.permission.RECORD_AUDIO"]
-        },
-        "web": {
-            "favicon": "./assets/favicon.png"
-        }
+  "expo": {
+    "name": "iluvus-react-native",
+    "slug": "iluvus-react-native",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
+    "plugins": [
+      "expo-image-picker",
+      "react-native-compressor"
+    ],
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSCameraUsageDescription": "We needs camera permissions to allow you to upload profile photos.",
+        "NSPhotoLibraryAddUsageDescription": "We needs photo library permissions to allow you to upload profile images.",
+        "NSPhotoLibraryUsageDescription": "We needs photo library permissions to allow you to upload profile images."
+      },
+      "bundleIdentifier": "com.anonymous.iluvus-react-native"
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.anonymous.iluvusreactnative"
+    },
+    "web": {
+      "favicon": "./assets/favicon.png"
     }
+  }
 }
