--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@babel/core": "^7.20.0",
-    "@bam.tech/react-native-image-resizer": "^3.0.7",
     "@expo/webpack-config": "^19.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -32,6 +31,8 @@
     "expo-image-picker": "^14.7.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.8.0",
+    "multer": "^1.4.5-lts.1",
     "nativewind": "^2.0.11",
     "pod-install": "^0.2.0",
     "prettier": "^3.1.1",
@@ -47,6 +48,7 @@
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.1.5",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
