--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-svg": "^14.1.0",
     "react-native-web": "^0.19.9",
     "react-navigation": "^5.0.0",
+    "react-router-dom": "^6.22.2",
     "start": "^5.1.0",
     "tailwindcss": "3.3.2"
   },
