--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-image-crop-picker": "^0.40.2",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.1.5",
     "react-native-progress": "^5.0.1",
