--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --reset-cache",
+    "start": "expo start",
+    "start-clean": "expo start --clear --reset-cache",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
