--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@preact/signals-react": "^2.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.8",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -28,7 +28,7 @@
     "@types/react-native-dotenv": "^0.2.2",
     "axios": "^1.6.2",
     "expo": "^49.0.0",
-    "expo-image-picker": "^14.7.1",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.8.0",
@@ -39,7 +39,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-compressor": "^1.8.24",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -53,7 +53,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.9",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^6.22.2",
