--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@react-navigation/bottom-tabs": "^6.5.11",
         "@react-navigation/native": "^6.1.9",
         "@react-navigation/stack": "^6.3.20",
+        "@rneui/base": "^4.0.0-rc.7",
+        "@rneui/themed": "^4.0.0-rc.8",
         "@types/react-native-dotenv": "^0.2.2",
         "axios": "^1.6.2",
         "expo": "^49.0.0",
