--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "react-native-otp-textinput": "^1.1.5",
         "react-native-progress": "^5.0.1",
         "react-native-reanimated": "~3.3.0",
+        "react-native-reanimated-carousel": "^3.5.1",
         "react-native-safe-area-context": "4.6.3",
         "react-native-screens": "~3.22.0",
         "react-native-svg": "^14.1.0",
