--- a/app.json
+++ b/app.json
@@ -45,6 +45,12 @@
         "projectId": "a2c46b59-3ebc-4799-9324-3b748c8a23fe"
       }
     },
-    "owner": "anhthuan250901"
+    "owner": "anhthuan250901",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/a2c46b59-3ebc-4799-9324-3b748c8a23fe"
+    }
   }
 }
