--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://iluvus-coh77z5j7a-ue.a.run.app
-# BASE_URL=http://127.0.0.1:8080
+# BASE_URL=https://iluvus-coh77z5j7a-ue.a.run.app
+BASE_URL=http://192.168.1.4:8080
