--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "iluvus-react-native",
   "version": "0.5.0",
   "main": "node_modules/expo/AppEntry.js",
+  "type": "commonjs",
   "scripts": {
     "start": "expo start --reset-cache --clear",
     "start-quick": "expo start",
@@ -12,17 +13,19 @@
   },
   "dependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/cli": "^0.21.5",
+    "@expo/config": "^10.0.4",
+    "@expo/metro-config": "^0.19.4",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@preact/signals-react": "^2.0.0",
-    "@react-native-async-storage/async-storage": "^1.19.8",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
@@ -31,38 +34,38 @@
     "@types/react-native-dotenv": "^0.2.2",
     "axios": "^1.6.2",
     "email-validator": "^2.0.4",
-    "expo": "^49.0.0",
-    "expo-av": "~13.4.1",
-    "expo-image-loader": "^4.6.0",
-    "expo-image-picker": "^14.7.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "expo": "^52.0.7",
+    "expo-av": "~15.0.1",
+    "expo-image-loader": "~5.0.0",
+    "expo-image-picker": "~16.0.2",
+    "expo-splash-screen": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
+    "expo-updates": "~0.26.7",
     "firebase": "^10.8.0",
     "multer": "^1.4.5-lts.1",
     "nativewind": "^2.0.11",
     "pod-install": "^0.2.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-compressor": "^1.8.24",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal": "^13.0.1",
     "react-native-otp-textinput": "^1.1.5",
     "react-native-progress": "^5.0.1",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-reanimated-zoom": "^0.3.3",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "^0.19.9",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^6.22.2",
@@ -72,15 +75,8 @@
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.0.0",
     "@preact/signals-react-transform": "^0.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.34.1",
-    "globals": "^15.0.0"
+    "globals": "^15.0.0",
+    "typescript": "^5.6.3"
   }
 }
