--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/cli": "^0.21.5",
     "@expo/config": "^10.0.4",
     "@expo/metro-config": "^0.19.4",
+    "@expo/metro-runtime": "~4.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
@@ -32,7 +33,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react-native-dotenv": "^0.2.2",
-    "axios": "^1.6.2",
+    "axios": "^1.7.9",
     "email-validator": "^2.0.4",
     "expo": "^52.0.7",
     "expo-av": "~15.0.1",
@@ -41,7 +42,7 @@
     "expo-splash-screen": "~0.29.11",
     "expo-status-bar": "~2.0.0",
     "expo-updates": "~0.26.7",
-    "firebase": "^10.8.0",
+    "firebase": "^10.14.1",
     "multer": "^1.4.5-lts.1",
     "nativewind": "^2.0.11",
     "pod-install": "^0.2.0",
