--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-updates": "~0.26.7",
     "firebase": "^10.14.1",
+    "fs-extra": "^11.3.0",
     "multer": "^1.4.5-lts.1",
     "nativewind": "^2.0.11",
     "pod-install": "^0.2.0",
