--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.7",
     "react-native-compressor": "^1.8.24",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -66,7 +66,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-reanimated-zoom": "^0.3.3",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "^4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "^0.19.9",
     "react-navigation": "^5.0.0",
