--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "newArchEnabled": true,
+    "scheme": "iluvus",
     "userInterfaceStyle": "light",
     "plugins": [
       "expo-image-picker",
