--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.9.0",
-    "@react-navigation/bottom-tabs": "^6.5.11",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "@types/react-native-dotenv": "^0.2.2",
@@ -65,9 +65,10 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-reanimated-zoom": "^0.3.3",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.4.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.6.0",
     "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.9",
     "react-navigation": "^5.0.0",
     "react-router-dom": "^6.22.2",
