--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native": "^0.76.7",
     "react-native-compressor": "^1.8.24",
     "react-native-dotenv": "^3.4.9",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
