--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 <!-- http://127.0.0.1:8080 -->
 <!-- https://iluvusapi-524621294197.us-east1.run.app -->
-BASE_URL = http://127.0.0.1:8080
+BASE_URL = https://iluvusapi-524621294197.us-east1.run.app
